--- a/0e0a9d1a27e2ff312ff58a8bb9414f6c.yml
+++ b/0e0a9d1a27e2ff312ff58a8bb9414f6c.yml
@@ -4,6 +4,7 @@ phenomena:
   gcmd_url: http://vocab.ndg.nerc.ac.uk/term/P141/4/GVAR0027
   names:
   - Air Temperature
+  - Cheese
 - best_name: Windspeed
 - best_name: Rain
   gcmd_name: EARTH SCIENCE > Atmosphere > Precipitation > Rain
