--- a/00e2ba205fd43a390c168841c3ca8aa3.yml
+++ b/00e2ba205fd43a390c168841c3ca8aa3.yml
@@ -1,3 +1,5 @@
+# and I can edit it here... just like a DS would do
+
 phenomena:
 - best_name: Ozone
   gcmd_name: EARTH SCIENCE > Atmosphere > Atmospheric Chemistry/Oxygen Compounds >
