prepped sample test files for cases to test

--- a/test_yaml/bad_duplicate_field.yml
+++ b/test_yaml/bad_duplicate_field.yml
@@ -7,4 +7,5 @@
 # from the equivalent pollable metadata service (e.g. fbi, securityDB)
 
 # one of: public|registered|restricted
-accessType: open
+accessType: restricted
+accessType: public
