--- a/yaml_files/964614ac2120d3743a0cebaa292181b8.yml
+++ b/yaml_files/964614ac2120d3743a0cebaa292181b8.yml
@@ -1,5 +1,5 @@
 splice rules:
-  phenomena: append_new_only
+  phenomena: cmms_only
 phenomena:
 - Turbulence:
     gcmd_name: EARTH SCIENCE > Atmosphere > Atmospheric Winds > Turbulence
