--- a/yaml_files/77910bcec71c820d4c92f40d3ed3f249.yml
+++ b/yaml_files/77910bcec71c820d4c92f40d3ed3f249.yml
@@ -2,6 +2,8 @@ splice rules:
   phenomena: cmms_only
 phenomena:
 - Sunshine Amount
+- Cheese
+- Wine
 - Mean Near-Surface Air Temperature
 - 10 Metre U Wind
 - 10 Metre V Wind
