--- a/yaml_files/964614ac2120d3743a0cebaa292181b8.yml
+++ b/yaml_files/964614ac2120d3743a0cebaa292181b8.yml
@@ -4,3 +4,4 @@ phenomena:
 - Turbulence:
     gcmd_keyword: EARTH SCIENCE > Atmosphere > Atmospheric Winds > Turbulence
     gcmd_url: http://vocab.ndg.nerc.ac.uk/term/P041/4/G251
+- Air Temperature
