--- a/yaml_files/b9c66c83c3eb4df38565de9dd80ca8f1.yml
+++ b/yaml_files/b9c66c83c3eb4df38565de9dd80ca8f1.yml
@@ -1,6 +1,7 @@
 splice rules:
   phenomena: cmms_only
 phenomena:
+- Flies on windscreen count
 - Air Temperature:
     gcmd_keyword: Air Temperature
     gcmd_url: http://vocab.ndg.nerc.ac.uk/term/P141/4/GVAR0027
