--- a/yaml_files/157b3d48aa564563ad27b86176ff345c.yml
+++ b/yaml_files/157b3d48aa564563ad27b86176ff345c.yml
@@ -39,3 +39,7 @@ phenomena:
 - Atmospheric Pressure Measurements:
     gcmd_keyword: Atmospheric Pressure Measurements
     gcmd_url: http://vocab.ndg.nerc.ac.uk/term/P141/4/GVAR0067
+- Charlotte:
+    gcmd_keyword: Charlotte
+    gcmd_url: Charlotte
+    
