--- a/yaml_files/157b3d48aa564563ad27b86176ff345c.yml
+++ b/yaml_files/157b3d48aa564563ad27b86176ff345c.yml
@@ -35,6 +35,8 @@ phenomena:
     gcmd_keyword: EARTH SCIENCE > Atmosphere > Atmospheric Chemistry/Oxygen Compounds
       > Ozone
     gcmd_url: http://vocab.ndg.nerc.ac.uk/term/P041/4/G164
+- Charlotte:
+    gcmd_keyword: Charlotte
 - Oxygen Compounds
 - Atmospheric Pressure Measurements:
     gcmd_keyword: Atmospheric Pressure Measurements
