--- a/yaml_files/773949b1edd59bd348267eb9fef53cc9.yml
+++ b/yaml_files/773949b1edd59bd348267eb9fef53cc9.yml
@@ -7,4 +7,4 @@ phenomena:
 - Specific Humidity
 - Trajectory Height
 - Trajectory Pressure
-- Ice Cream uptake index for poorly penguins
+- Hayley test parameter
