--- a/yaml_files/ae37c7090bd44cd4adf7ffa93d5554c3.yml
+++ b/yaml_files/ae37c7090bd44cd4adf7ffa93d5554c3.yml
@@ -39,5 +39,6 @@ phenomena:
 - Atmospheric Pressure Measurements:
     gcmd_keyword: Atmospheric Pressure Measurements
     gcmd_url: http://vocab.ndg.nerc.ac.uk/term/P141/4/GVAR0067
-- Kate
+- Kate:
+    gcmd_keyword: what has kate done???
 
