--- a/yaml_files/ece1a97c10f24882b6ce3e69b61c4ed4.yml
+++ b/yaml_files/ece1a97c10f24882b6ce3e69b61c4ed4.yml
@@ -3,7 +3,8 @@ splice rules:
 
 phenomena:
 - INFRARED RADIANCE:
-    gcmd_keyword: SPECTRAL/ENGINEERING > INFRARED WAVELENGTHS > INFRARED RADIANCE 
+    gcmd_keyword: SPECTRAL/ENGINEERING > INFRARED WAVELENGTHS > INFRARED RADIANCE
+    gcmd_url: http://vocab.nerc.ac.uk/collection/P04/current/H147/
 - REFLECTED INFRARED
     gcmd_keyword: SPECTRAL/ENGINEERING > INFRARED WAVELENGTHS > REFLECTED INFRARED 
 - THERMAL INFRARED
