--- a/yaml_files/aa44e02718fd4ba49cefe36d884c6e50.yml
+++ b/yaml_files/aa44e02718fd4ba49cefe36d884c6e50.yml
@@ -10,6 +10,6 @@ phenomena:
 - Ambiguity levels in the determined zenith and azimuth angles
 - Decay time of the meteor echo
 - Meteor echo power and S/N ratio
-- Mesosphere Air Temperature:
+- Mesosphere Air Temperature
 - Mesosphere Zonal Wind Component
 - Mesosphere Meridional Wind Component
