--- a/yaml_files/bbd6916225e7475514e17fdbf11141c1.yml
+++ b/yaml_files/bbd6916225e7475514e17fdbf11141c1.yml
@@ -5,3 +5,63 @@ phenomena:
     gcmd_keyword: EARTH SCIENCE > Atmosphere > Precipitation > Rain
     gcmd_url: http://vocab.ndg.nerc.ac.uk/term/P041/4/G288
 - Hourly Rainfall Amount
+- Date at end of observation period:
+    names:
+    - Date at end of observation period
+    units: s
+- 'Descriptor: precipitation amount':
+    names:
+    - 'Descriptor: precipitation amount'
+    units: '1'
+- 'Elapsed time to storage in MIDAS ':
+    names:
+    - 'Elapsed time to storage in MIDAS '
+    units: minutes
+- Met Office receipt stamp time:
+    names:
+    - Met Office receipt stamp time
+    units: s
+- Observation hour count:
+    names:
+    - Observation hour count
+    units: hours
+- Precipitation amount:
+    names:
+    - Precipitation amount
+    units: mm
+- 'Precipitation duration ':
+    names:
+    - 'Precipitation duration '
+    units: minutes
+- 'QC code: precipitation amount':
+    names:
+    - 'QC code: precipitation amount'
+    units: '1'
+- 'QC code: precipitation duration':
+    names:
+    - 'QC code: precipitation duration'
+    units: '1'
+- identifier type:
+    names:
+    - identifier type
+    units: '1'
+- message type:
+    names:
+    - message type
+    units: '1'
+- midas qc version number:
+    names:
+    - midas qc version number
+    units: '1'
+- state indicator for the record:
+    names:
+    - state indicator for the record
+    units: '1'
+- station identifier:
+    names:
+    - station identifier
+    units: '1'
+- unique source identifier or station site number:
+    names:
+    - unique source identifier or station site number
+    units: '1'
