--- a/yaml_files/8dc05f6ecc6065a5d10fc7b8829589ec.yml
+++ b/yaml_files/8dc05f6ecc6065a5d10fc7b8829589ec.yml
@@ -4,15 +4,111 @@ phenomena:
 - Soil Temperature:
     gcmd_keyword: Soil Temperature
     gcmd_url: http://vocab.ndg.nerc.ac.uk/term/P141/4/GVAR0801
-- Soil Temperature Level 3
-- Soil Temperature Level 4
-- Soil Temperature Level 1
-- Soil Temperature Level 2
-- 15 cm Soil Temperature
-- 5 cm Soil Temperature
-- 25 cm Soil Temperature
-- 50 cm Soil Temperature
-- 20 cm Soil Temperature
-- 10 cm Soil Temperature
-- 30 cm Soil Temperature
-- 100 cm Soil Temperature
+- 100cm soil temperature:
+    names:
+    - 100cm soil temperature
+    units: degC
+- 10cm soil temperature:
+    names:
+    - 10cm soil temperature
+    units: degC
+- 20cm soil temperature:
+    names:
+    - 20cm soil temperature
+    units: degC
+- 30cm soil temperature:
+    names:
+    - 30cm soil temperature
+    units: degC
+- 50cm soil temperature:
+    names:
+    - 50cm soil temperature
+    units: degC
+- 5cm soil temperature:
+    names:
+    - 5cm soil temperature
+    units: degC
+- Date and time of observation:
+    names:
+    - Date and time of observation
+    units: s
+- 'Descriptor: 100cm soil temperature':
+    names:
+    - 'Descriptor: 100cm soil temperature'
+    units: '1'
+- 'Descriptor: 10cm soil temperature':
+    names:
+    - 'Descriptor: 10cm soil temperature'
+    units: '1'
+- 'Descriptor: 20cm soil temperature':
+    names:
+    - 'Descriptor: 20cm soil temperature'
+    units: '1'
+- 'Descriptor: 30cm soil temperature':
+    names:
+    - 'Descriptor: 30cm soil temperature'
+    units: '1'
+- 'Descriptor: 50cm soil temperature':
+    names:
+    - 'Descriptor: 50cm soil temperature'
+    units: '1'
+- 'Descriptor: 5cm soil temperature':
+    names:
+    - 'Descriptor: 5cm soil temperature'
+    units: '1'
+- Elapsed time to storage in MIDAS:
+    names:
+    - Elapsed time to storage in MIDAS
+    units: minutes
+- Met Office receipt stamp time:
+    names:
+    - Met Office receipt stamp time
+    units: s
+- 'QC code: 100cm soil temperature':
+    names:
+    - 'QC code: 100cm soil temperature'
+    units: '1'
+- 'QC code: 10cm soil temperature':
+    names:
+    - 'QC code: 10cm soil temperature'
+    units: '1'
+- 'QC code: 20cm soil temperature':
+    names:
+    - 'QC code: 20cm soil temperature'
+    units: '1'
+- 'QC code: 30cm soil temperature':
+    names:
+    - 'QC code: 30cm soil temperature'
+    units: '1'
+- 'QC code: 50cm soil temperature':
+    names:
+    - 'QC code: 50cm soil temperature'
+    units: '1'
+- 'QC code: 5cm soil temperature':
+    names:
+    - 'QC code: 5cm soil temperature'
+    units: '1'
+- identifier type:
+    names:
+    - identifier type
+    units: '1'
+- message type:
+    names:
+    - message type
+    units: '1'
+- midas qc version number:
+    names:
+    - midas qc version number
+    units: '1'
+- state indicator for the record:
+    names:
+    - state indicator for the record
+    units: '1'
+- station identifier:
+    names:
+    - station identifier
+    units: '1'
+- unique source identifier or station site number:
+    names:
+    - unique source identifier or station site number
+    units: '1'
