--- a/yaml_files/b4c028814a666a651f52f2b37a97c7c7.yml
+++ b/yaml_files/b4c028814a666a651f52f2b37a97c7c7.yml
@@ -1,14 +1,102 @@
 splice rules:
   phenomena: cmms_only
 phenomena:
-- Diffuse Solar Irradiation Amount
 - Solar Irradiance:
     gcmd_keyword: Solar Irradiance
     gcmd_url: http://vocab.ndg.nerc.ac.uk/term/P141/4/GVAR0809
-- Global Solar Irradiation Amount
-- Hourly Sunshine
 - Sunshine:
     gcmd_keyword: EARTH SCIENCE > Atmosphere > Atmospheric Radiation > Sunshine
     gcmd_url: http://vocab.ndg.nerc.ac.uk/term/P041/4/G217
-- Sunshine Amount
-- Direct Solar Irradiation Amount
+- Date at end of observation period:
+    names:
+    - Date at end of observation period
+    units: s
+- Diffuse solar irradiation amount:
+    names:
+    - Diffuse solar irradiation amount
+    units: KJ/m2
+- Direct solar irradiation amount:
+    names:
+    - Direct solar irradiation amount
+    units: KJ/m2
+- Elapsed time to storage in MIDAS:
+    names:
+    - Elapsed time to storage in MIDAS
+    units: minutes
+- Global horizontal illumination:
+    names:
+    - Global horizontal illumination
+    units: KJ/m2
+- Global solar irradiation amount:
+    names:
+    - Global solar irradiation amount
+    units: KJ/m2
+- Irradiation balance amount:
+    names:
+    - Irradiation balance amount
+    units: KJ/m2
+- Mean global S latitude radiation:
+    names:
+    - Mean global S latitude radiation
+    units: KJ/m2
+- Met Office receipt stamp time:
+    names:
+    - Met Office receipt stamp time
+    units: s
+- Observation hour count:
+    names:
+    - Observation hour count
+    units: hours
+- 'QC code: Diffuse solar irradiation amount':
+    names:
+    - 'QC code: Diffuse solar irradiation amount'
+    units: '1'
+- 'QC code: Direct solar irradiation amount':
+    names:
+    - 'QC code: Direct solar irradiation amount'
+    units: '1'
+- 'QC code: Global horizontal illumination':
+    names:
+    - 'QC code: Global horizontal illumination'
+    units: '1'
+- 'QC code: Global solar irradiation amount':
+    names:
+    - 'QC code: Global solar irradiation amount'
+    units: '1'
+- 'QC code: Irradiation balance amount':
+    names:
+    - 'QC code: Irradiation balance amount'
+    units: '1'
+- 'QC code: Mean global S latitude radiation':
+    names:
+    - 'QC code: Mean global S latitude radiation'
+    units: '1'
+- The identifier type associated with a particular reporting capability for this station:
+    names:
+    - The identifier type associated with a particular reporting capability for this
+      station
+    units: '1'
+- identifier type:
+    names:
+    - identifier type
+    units: '1'
+- message type:
+    names:
+    - message type
+    units: '1'
+- midas qc version number:
+    names:
+    - midas qc version number
+    units: '1'
+- state indicator for the record:
+    names:
+    - state indicator for the record
+    units: '1'
+- station identifier:
+    names:
+    - station identifier
+    units: '1'
+- unique source identifier or station site number:
+    names:
+    - unique source identifier or station site number
+    units: '1'
