--- a/yaml_files/faacc84efc674e04b4342071492a859a.yml
+++ b/yaml_files/faacc84efc674e04b4342071492a859a.yml
@@ -1,5 +1,7 @@
 splice rules:
   phenomena: cmms_only
+  n_files:cmms_only
+  size:append
 phenomena:
 - Air Temperature:
     gcmd_keyword: Air Temperature
