--- a/yaml_files/faacc84efc674e04b4342071492a859a.yml
+++ b/yaml_files/faacc84efc674e04b4342071492a859a.yml
@@ -2,6 +2,10 @@ splice rules:
   phenomena: cmms_only
   n_files:cmms_only
   size:append
+  
+n_files:999
+size:666
+  
 phenomena:
 - Air Temperature:
     gcmd_keyword: Air Temperature
