--- a/yaml_files/260df0db210143dcbecf3182e24817a3.yml
+++ b/yaml_files/260df0db210143dcbecf3182e24817a3.yml
@@ -1,6 +1,6 @@
 splice rules:
   accessType: cmms_only
-  # licenceUrl: cmms_only
+  licenceUrl: cmms_only
 # one of: public|registered|restricted
 accessType: public
 # url to licence  
