--- a/yaml_files/492c792f417c452db1a5946b9c3bc5fe.yml
+++ b/yaml_files/492c792f417c452db1a5946b9c3bc5fe.yml
@@ -34,3 +34,4 @@ phenomena:
 - Atmospheric Phenomena:
     gcmd_keyword: Atmospheric Phenomena
     gcmd_url: http://vocab.ndg.nerc.ac.uk/term/P131/4/GTER0022
+accessType: public
